fix group card tittle text overflow

--- a/frontend/src/styles/pages/_group-grid.css
+++ b/frontend/src/styles/pages/_group-grid.css
@@ -1,6 +1,6 @@
 .group-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(275px, 1fr));
   grid-column-gap: 30px;
   grid-row-gap: 40px;
   grid-auto-rows: 1fr;
@@ -15,6 +15,13 @@
   font-weight: var(--fw-reg);
   letter-spacing: 1px;
   font-size: 20px;
+  height: 2.2em;
+  line-height: 1em;
+    text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 
 .group-grid img {
@@ -99,9 +106,17 @@
 .tags-container {
   font-size: 12px;
   font-weight: 500;
+  margin-top: 8px;
   margin-bottom: 15px;
-  margin-left: -1px;
+  margin-left: 5px;
+    margin-right: 5px;
+
   color: white;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: scroll;
+  height: 1.7rem;
 }
 
 .tags-container .tag {
